@@ -63,7 +63,7 @@ libspectrum_la_SOURCES = bzip2.c \
 
 libspectrum_la_LDFLAGS = -version-info 8:0:0 -no-undefined @WINDRES_LDFLAGS@
 
-libspectrum_la_LIBADD = @AUDIOFILE_LIBS@ -lm
+libspectrum_la_LIBADD = @AUDIOFILE_LIBS@ @GLIB_LIBS@ -lm
 
 libspectrum_la_DEPENDENCIES = @WINDRES_OBJ@
 
