@@ -137,22 +137,12 @@ if test "$withval" = no; then glib=no; else glib=yes; fi,
 glib=yes)
 AC_MSG_RESULT($glib)
 if test "$glib" = yes; then
-  glib2=no
-  AM_PATH_GLIB_2_0(
-    2.0.0,
-    glib2=yes
-    AC_DEFINE([HAVE_LIB_GLIB], 1, [Defined if we've got glib])
-    LIBS="$LIBS `pkg-config --libs glib-2.0`",
+  PKG_CHECK_MODULES(
+    GLIB,
+    glib-2.0,
+    AC_DEFINE([HAVE_LIB_GLIB], 1, [Defined if we've got glib]),
+    glib="no"
   )
-  if test "$glib2" = no; then
-    AM_PATH_GLIB(
-      1.2.0,
-      AC_DEFINE([HAVE_LIB_GLIB], 1, [Defined if we've got glib])
-      LIBS="$LIBS `glib-config --libs`",
-      glib=no
-      AC_MSG_WARN(glib not found - using internal replacement)
-    )
-  fi
 fi
 
 AM_CONDITIONAL(USE_MYGLIB, test "$glib" = no)
